<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welComeScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_240sdp"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/_30ssp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/orbitron"
        android:letterSpacing=".1"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/zenantique"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_20ssp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGetStarted"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_64sdp"
        android:background="@drawable/nextbutton"
        android:layout_marginStart="@dimen/_15sdp"
        android:fontFamily="@font/zenantique"
        android:text="@string/getStartedButton"
        android:elevation="@dimen/_5sdp"
        android:letterSpacing=".1"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>