<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    tools:context=".fastDelivery">

    <TextView
        android:id="@+id/textDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/orbitron"
        android:letterSpacing=".1"
        android:text="@string/fastDelivery"
        android:textColor="@color/HeadingTextColor"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageDelivery"
        app:layout_constraintStart_toStartOf="@+id/imageDelivery"
        app:layout_constraintTop_toBottomOf="@+id/imageDelivery" />

    <TextView
        android:id="@+id/textDeliveryPara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/zenantique"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/fastDeliveryParagraph"
        android:textAlignment="center"
        android:textColor="@color/SubHeadingTextColor"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="@+id/textDelivery"
        app:layout_constraintStart_toStartOf="@+id/textDelivery"
        app:layout_constraintTop_toBottomOf="@+id/textDelivery" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNextWelcome"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_70sdp"
        android:background="@drawable/nextbutton"
        android:elevation="@dimen/_5sdp"
        android:fontFamily="@font/zenantique"
        android:letterSpacing=".1"
        android:text="@string/Next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageDelivery"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:contentDescription="@string/fastDelivery"
        android:scaleType="centerCrop"
        android:src="@drawable/food_delivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>